examples/errors/i0506.sdm
module Example <https://example.com/api> is

  structure access_record is
    Name -> string
  end

  enum Foo of
    one
    two
  end

  union Bar of
    Foo as foo
  end

end
